--- a/ToDo.txt
+++ b/ToDo.txt
@@ -4,24 +4,23 @@ Rummage - To Do
 High
 ----
 
-persistence of searches
-Tabbed display to allow multiple searches (ideally simultaneously)
-Modify the search so the prepare is not called for subsequent searches when only the search strings have changed
+Right-click menu on matching file view
+Tab-completion for directory pane
 
 
 Medium
 ------
 Implement CTRL+Up/Down to jump to prev/next match in file pane
-Add pop-up history box which will show previous search paths and previous search strings which the user can click on to select for the new search
-Right-click menu on matching file view
+Tabbed display to allow multiple searches (ideally simultaneously)
+
+
 
 Low
 ---
 
 Right-click menu on Include/Exclude includes common filter patterns which user can add
 Highlight the "Include Items" and "Exclude Items" tabs in some way to indicate when there are filters present.
-Remove the watermark under the search boxes when it is going to be covered by the text to ensure the text is easily readable.
-
+persistence of searches
 
 
 
@@ -31,3 +30,6 @@ Completed
 ---------
 
 Snarl integration
+Modify the search so the prepare is not called for subsequent searches when only the search strings have changed
+Add pop-up history box which will show previous search paths and previous search strings which the user can click on to select for the new search
+Remove the watermark under the search boxes when it is going to be covered by the text to ensure the text is easily readable.
